docs(#97): release prep — CLAUDE.md sweep, CHANGELOG reorg, release runbook
Prepares #97. Everything between "all PRs merged" and the tag, except the
release commit itself.

CLAUDE.md had drifted through the whole v0.5.0 wave. Rewrote the "No tests
yet" section (the library now has ~4,570 tests and a required Test check),
replaced the three package rows describing the retired card/list + chip/list
twin families with the single ElwhaItemList row, corrected FlatLafKeyMapping
from a public facade type to the package-private mechanism it is, and replaced
"The road to 1.0.0" — every epic it listed as pending is closed — with a
"Where 1.0.0 stands" section that names what is actually left.

Reorganized CHANGELOG's [Unreleased] section in place: four waves had each
appended their own set of category headings, so the section carried duplicate
Added/Changed/Removed/Fixed blocks. Now one heading per category in
Keep-a-Changelog order, sub-grouped by component family (Added) and by defect
class (Fixed), with breaking changes first under Changed and Removed. Entries
moved verbatim; no issue reference was dropped.

Added docs/development/release-runbook.md — pre-flight checklist, the release
commit's exact contents, what publish.yml validates, and post-publish
verification.

The release commit (pom.xml bump + [Unreleased] -> [1.0.0] flip) is
deliberately NOT here; it belongs to the operator, per the runbook.

Related to #97, #80